<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorBackground"
>


    <TextView
            android:text="@string/text_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSigninTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorText"
            android:fontFamily="casual"
            android:textSize="50sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextSigninEmail"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorGray"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/text_email"
            android:background="@drawable/background_authentication_edittext"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewSigninTitle"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextSigninPassword"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorGray"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/text_password"
            android:background="@drawable/background_authentication_edittext"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextSigninEmail"/>
    <TextView
            android:text="@string/text_forgot_password_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewForgotPasswordLink" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextSigninPassword"/>
    <Button
            android:text="@string/text_signin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/buttonSignin"
            android:background="@drawable/background_authentication_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordLink" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/view1" app:layout_constraintVertical_bias="0.0"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorGray"
            android:id="@+id/view1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/text_signup_link"
            android:layout_width="0dp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSignupLink" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/view1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>