<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorBackground"
>


    <TextView
            android:text="@string/text_your"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="40sp"
            android:fontFamily="casual"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/text_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="40sp"
            android:fontFamily="casual"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle1"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorGray"
            android:id="@+id/view5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLength="30"
            android:background="@drawable/background_authentication_edittext"
            android:hint="@string/text_fullname"
            android:id="@+id/editTextFullname" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/view5"
            android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/text_next"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:alpha="0.3"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:background="@drawable/background_authentication_button"
            android:id="@+id/buttonNext" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextFullname" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/view1" app:layout_constraintVertical_bias="0.0"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorGray"
            android:id="@+id/view1" android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/text_signin_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSigninLink" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="20sp"
            android:singleLine="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/view1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>