<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorBackground"
>

    <TextView
            android:text="@string/text_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:fontFamily="casual"
            android:textSize="50sp"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLength="100"
            android:hint="@string/text_email"
            android:background="@drawable/background_authentication_edittext"
            android:id="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <Button
            android:text="@string/text_send"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:alpha="0.3"
            android:background="@drawable/background_authentication_button"
            android:id="@+id/buttonSend" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"/>
    <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:alpha="0.2"
            android:id="@+id/view1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <View
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/background_authentication_button"
            android:id="@+id/view2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/view2" app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2" app:layout_constraintBottom_toBottomOf="@+id/view2"/>
    <TextView
            android:text="@string/text_please_wait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:singleLine="true"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/view2" app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/groupResetPassword"
                                            app:constraint_referenced_ids="textView6,progressBar,view1,view2"
                                            android:visibility="gone"/>
    <TextView
            android:text="@string/text_return_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:singleLine="true"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/textViewReturnToSignIn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/view3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorGray"
            android:id="@+id/view3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>