<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:background="@color/colorBackground"
>



    <TextView
            android:text="@string/text_your"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="40sp"
            android:fontFamily="casual"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="40sp"
            android:fontFamily="casual"
            android:gravity="center"
            android:maxLength="30"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle1"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorGray"
            android:id="@+id/view5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLength="100"
            android:background="@drawable/background_authentication_edittext"
            android:hint="@string/text_email"
            android:id="@+id/editTextEmail" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/view5"
            android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/text_next"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:alpha="0.3"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:background="@drawable/background_authentication_button"
            android:id="@+id/buttonNext" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
    />



    <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:alpha="0.2"
            android:id="@+id/view2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"/>

    <View
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/viewEmailProgressBackground"
            android:background="@drawable/background_authentication_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/viewEmailProgressBackground"
            app:layout_constraintStart_toStartOf="@+id/viewEmailProgressBackground"
            app:layout_constraintEnd_toEndOf="@+id/viewEmailProgressBackground" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/viewEmailProgressBackground"/>
    <TextView
            android:text="@string/text_please_wait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@+id/viewEmailProgressBackground"
            app:layout_constraintEnd_toEndOf="@+id/viewEmailProgressBackground"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"/>


    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/groupProgressBar"
                                            app:constraint_referenced_ids="viewEmailProgressBackground,progressBar,textView2,view2"
                                            android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>